# typer-template

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  gen_config_page.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  whitelist.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
configuration/: index.html
docs/: gen_ref_pages.py  getting_started.md  notes.md
docs/reference/: index.md
getting_started/: index.html
notes/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/cli_app/cli/app/: index.html
reference/cli_app/cli/callbacks/meta/: index.html
reference/cli_app/cli/commands/command/: index.html
reference/cli_app/cli/commands/completion/: index.html
reference/cli_app/core/settings/: index.html
reference/cli_app/main/: index.html
reference/cli_app/utils/console/: index.html
reference/cli_app/utils/emoji/: index.html
reference/cli_app/utils/format/: index.html
reference/cli_app/utils/log/: index.html
reference/cli_app/utils/meta/: index.html
reference/cli_app/utils/misc/: index.html
reference/cli_app/utils/output/: index.html
reference/cli_app/utils/progress/: index.html
reference/cli_app/utils/stdin/: index.html
search/: search_index.json
src/: main.py
src/cli/: app.py  command.py  meta_commands.py
src/cli/callbacks/: meta.py
src/cli/commands/: __init__.py  command.py
src/cli_app/: main.py
src/cli_app/cli/: app.py
src/cli_app/cli/callbacks/: meta.py
src/cli_app/cli/commands/: __init__.py  command.py  completion.py
src/cli_app/core/: __init__.py
src/cli_app/utils/: console.py  emoji.py  format.py  log.py  meta.py  misc.py  output.py  progress.py  stdin.py
src/utils/: console.py  emoji.py  files.py  format.py  log.py  meta.py  misc.py  progress.py
tests/: conftest.py  test_main.py
tests/cli/: test_app.py  test_callbacks.py
tests/cli/__snapshots__/: test_app.ambr
tests/utils/: test_console.py  test_emoji.py  test_format.py  test_log.py  test_meta.py  test_misc.py  test_output.py  test_progress.py  test_stdin.py
