# PROJECT ----------------------------------------------------------------------
[project]
name = "cli-app"
version = "0.3.0"
description = "Add your description here"
authors = [
    { name = "Igor Lashkov", email = "rwrotson@yandex.ru" },
]
maintainers = []
keywords = [
    "template",
    "example",
    "typer",
    "uv",
    "pytest",
    "ruff",
    "mypy",
    "vulture",
    "precommit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.10.1",
    "structlog>=25.1.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "emojis>=0.7.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.12.2",
    "syrupy>=4.9.1",
    "taskipy>=1.14.0",
    "vulture>=2.15",
]
docs = [
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.6",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.29",
]

[project.urls]
Documentation = "..."
"Source code" = "..."

[project.scripts]
cli-app = "cli_app.main:main"



# BUILD BACKEND ----------------------------------------------------------------
[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cli_app"
module-root = "src"


# PYTEST -----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=3 --tb=short --cov --cov-report=term-missing -n auto"

[tool.coverage.run]
source = ["cli_app"]
parallel = true
concurrency = ["multiprocessing"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80


# MYPY -------------------------------------------------------------------------
[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
files = ["src", "tests"]
exclude_gitignore = true
python_version = "3.13"
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
check_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
strict_equality = true
show_error_codes = true


# RUFF -------------------------------------------------------------------------
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]
line-length = 100
indent-width = 4
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ERA",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "C90",
    "N",
    "PERF",
    "E",
    "W",
    "DOC",
    "D",
    "F",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "UP",
    "FURB",
    "RUF",
    "TRY"
]
ignore = [
    "FBT001",
    "FBT002",
    "F811",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "D407",
    "D413",
    "S101",
    "ANN201",
    "PLR1711",
    "PLR0913",
    "PIE790",
    "N817",
    "TRY003",
    "COM812",
]
fixable = ["I", "D2"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"  # Allow unused variables when underscore-prefixed.

[tool.ruff.lint.isort]
known-local-folder = ["cli_app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


# VULTURE ----------------------------------------------------------------------
[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
pythonVersion = "3.13"

[tool.vulture]
min_confidence = 80
paths = ["src/cli_app/", "whitelist.py"]
ignore_decorators = ["@app.command", "@app.callback", "@*.command", "@*.callback"]
sort_by_size = true


# COMMITIZEN -------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true


# TASKIPY ---------------------------------------------------------------------
[tool.taskipy.tasks]
lint = "ruff check ."
fmt = "ruff format ."
typecheck = "mypy src/"
test = "pytest"
test-fast = "pytest --no-cov -n auto"
dead = "vulture src/cli_app/ whitelist.py"
audit = "pip-audit"
